load("//ECU/BFC/Appl:srcs.bzl", "GENDATA", "SOURCE")
load("//third_party/tasking_cc_binary:macro.bzl", "cc_binary_tasking")

package(default_visibility = ["//visibility:public"])

cc_binary_tasking(
    name = "BFC",
    srcs = [
        "@sip//:all_components",
    ] + SOURCE + GENDATA,
    additional_linker_inputs = [
        "//ECU/BFC/Appl:Source/vLinkGen_Template.lsl",
    ],
    copts = [
        "-DBRS_COMP_TASKING",
        "-DBRS_PLATFORM_AURIX",
        "-DNDEBUG",
        "--core=tc1.6.2",
        "-IECU/BFC/Appl/GenData",
        "-IECU/BFC/Appl/GenData/Components",
        "-IECU/BFC/Appl/GenData/inc",
        "-IECU/BFC/Appl/Source",
        "-IECU/BFC/Appl/Include",
        "-Iexternal/+_repo_rules2+sip/Components/_Common/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Os/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Mcal_Tc3xx/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/BswM/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Can_30_Core/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/CanIf/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/CanSM/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/CanTP/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Com/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/ComM/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Crc/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Dcm/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Dem/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/Det/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/EcuM/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/NvM/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/MemIf/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/PduR/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/vCan_30_Mcan/Implementation",
        "-Iexternal/+_repo_rules2+sip/Components/VStdLib/Implementation",
        "-Iexternal/+_repo_rules2+sip/DemoComponents/vLinkGen/Implementation",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/DemoWorkspace/McalDemo/TC39B/0_Src/BaseSw/Infra/Irq/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/DemoWorkspace/McalDemo/TC39B/0_Src/AppSw/Tricore/DemoMcal/Demo_Irq/Adc_Irq/",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/DemoWorkspace/McalDemo/TC39B/0_Src/BaseSw/Infra/Autosar_Srv/AS440",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/DemoWorkspace/McalDemo/TC39B/0_Src/BaseSw/Infra/Autosar_Srv",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Infra_Prod/Sfr/TC39xB/_Reg",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/DemoWorkspace/McalDemo/TC39B/0_Src/BaseSw/Infra/Integration",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/Adc/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/Dio/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/Fee/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/Fls_17_Dmu/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/McalLib/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/McalLib/ssc/inc/AS440",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/Mcu/ssc/inc",
        "-Iexternal/+_repo_rules2+sip/ThirdParty/Mcal_Tc3xx/Supply/MC-ISAR_AS440_TC3xx_BASIC_2.30.0/McIsar/Src/Mcal/Tricore/Port/ssc/inc",
    ],
    includes = [
        # "GenData",
        # "GenData/Components",
        # "GenData/Components/inc",
    ],
    linkopts = [
        "--optimize=1",
        "--output=$(BINDIR)/ECU/BFC/Appl/BFC.hex:IHEX",
        "--map-file=$(BINDIR)/ECU/BFC/Appl/BFC.map",
        "--lsl-file=ECU/BFC/Appl/Source/vLinkGen_Template.lsl",
    ],
)
